--- a/style.css
+++ b/style.css
@@ -405,6 +405,8 @@ nav ul{
     background-color: yellow;
 }
 footer{
+    width: 100%
     position: absolute;
-    bottom:0;
+    bottom: 0;
+    text-align: center;
 }
