--- a/style.css
+++ b/style.css
@@ -201,10 +201,7 @@ input:focus{
     transition-property: background, border, opacity, box-shadow, transform;
     transition-timing-function: ease-in;
 }
-.material-symbols-outlined
-{
- pointer-events: none;   
-}
+
 .note:hover{
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
     0 1px 3px 1px rgba(60, 64, 67, 0.149);
@@ -421,4 +418,8 @@ footer
 #neon
 {
     background-color:  rgb(120, 255, 1);
+}
+
+#search_icon{
+    cursor: pointer;
 }
